Rework vars for infra-docker-registry

--- a/ansible/install_applications/roles/download-pyload.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/download-pyload.deploy/tasks/main.yml
@@ -2,7 +2,7 @@
 
 - name: Build and push pyLoad image
   docker_image:
-    name: "{{ docker_registry_url }}/pyload"
+    name: "{{ docker_registry.url }}/pyload"
     source: build
     build:
       path: "{{ role_path }}/app/build"
