--- a/ansible/install_applications/roles/download-sabnzbd.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/tasks/main.yml
@@ -2,7 +2,7 @@
 
 - name: Build and push sabnzbd image
   docker_image:
-    name: "{{ docker_registry_url }}/sabnzbd"
+    name: "{{ docker_registry.url }}/sabnzbd"
     source: build
     build:
       path: "{{ role_path }}/app/build"
