--- a/ansible/install_applications/roles/logging-fluentd.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/tasks/main.yml
@@ -2,7 +2,7 @@
 
 - name: Build and push Fluentd image
   docker_image:
-    name: "{{ docker_registry_url }}/fluentd"
+    name: "{{ docker_registry.url }}/fluentd"
     source: build
     build:
       path: "{{ role_path }}/app/build"
