--- a/ansible/install_applications/roles/web-ttrss.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/web-ttrss.deploy/tasks/main.yml
@@ -2,7 +2,7 @@
 
 - name: Build and push TT-RSS image
   docker_image:
-    name: "{{ docker_registry_url }}/ttrss"
+    name: "{{ docker_registry.url }}/ttrss"
     source: build
     build:
       path: "{{ role_path }}/app/build"
