--- a/ansible/install_applications/roles/auth-lemonldap.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/tasks/main.yml
@@ -2,7 +2,7 @@
 
 - name: Build and push LemonLDAP image
   docker_image:
-    name: "{{ docker_registry_url }}/lemonldap"
+    name: "{{ docker_registry.url }}/lemonldap"
     source: build
     build:
       path: "{{ role_path }}/app/build"
