--- a/ansible/install_applications/roles/home-homeassistant.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/tasks/main.yml
@@ -2,7 +2,7 @@
 
 - name: Build and push Home Assistant image
   docker_image:
-    name: "{{ docker_registry_url }}/homeassistant"
+    name: "{{ docker_registry.url }}/homeassistant"
     source: build
     build:
       path: "{{ role_path }}/app/build"
