--- a/ansible/install_applications/roles/infra-zonemta.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/tasks/main.yml
@@ -17,7 +17,7 @@
 
 - name: Build and push ZoneMTA image
   docker_image:
-    name: "{{ docker_registry_url }}/zone-mta"
+    name: "{{ docker_registry.url }}/zone-mta"
     source: build
     build:
       path: "{{ role_path }}/app/build"
