--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/tasks/main.yml
@@ -8,7 +8,7 @@
 
 - name: Build and push release-watcher image
   docker_image:
-    name: "{{ docker_registry_url }}/release-watcher"
+    name: "{{ docker_registry.url }}/release-watcher"
     source: build
     build:
       path: "{{ release_watcher_path }}"
