--- a/ansible/install_applications/roles/web-heimdall.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/web-heimdall.deploy/tasks/main.yml
@@ -2,7 +2,7 @@
 
 - name: Build and push Heimdall image
   docker_image:
-    name: "{{ docker_registry_url }}/heimdall"
+    name: "{{ docker_registry.url }}/heimdall"
     source: build
     build:
       path: "{{ role_path }}/app/build"
