Rework vars for infra-gotify

--- a/ansible/install_applications/roles/infra-gotify.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/infra-gotify.deploy/defaults/main.yml
@@ -2,10 +2,7 @@
 
 gotify_enabled: true
 
-gotify_default_admin_user: admin
-gotify_default_admin_password: clear_password
-
-gotify_users: []
+#gotify_users:
 #  - name: user1
 #    password: password1
 #    admin: True
