--- a/ansible/install_applications/roles/infra-gotify.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/infra-gotify.deploy/tasks/main.yml
@@ -32,8 +32,8 @@
     return_content: yes
     validate_certs: no
     force_basic_auth: yes
-    user: "{{ gotify_default_admin_user }}"
-    password: "{{ gotify_default_admin_password }}"
+    user: "{{ gotify.default_admin_user }}"
+    password: "{{ gotify.default_admin_password }}"
   register: gotify_existing_users
 
 - name: Create missing users
@@ -50,9 +50,9 @@
     return_content: yes
     validate_certs: no
     force_basic_auth: yes
-    user: "{{ gotify_default_admin_user }}"
-    password: "{{ gotify_default_admin_password }}"
-  with_items: "{{ gotify_users }}"
+    user: "{{ gotify.default_admin_user }}"
+    password: "{{ gotify.default_admin_password }}"
+  with_items: "{{ gotify.users }}"
   when: item.name not in (gotify_existing_users.json | map(attribute='name'))
 
 - name: List existing applications
@@ -66,7 +66,7 @@
     force_basic_auth: yes
     user: "{{ item.name }}"
     password: "{{ item.password }}"
-  with_items: "{{ gotify_users }}"
+  with_items: "{{ gotify.users }}"
   register: gotify_existing_applications
 
 - set_fact:
@@ -88,5 +88,5 @@
     force_basic_auth: yes
     user: "{{ item.0.name }}"
     password: "{{ item.0.password }}"
-  loop: "{{ gotify_users | subelements('applications') }}"
+  loop: "{{ gotify.users | subelements('applications') }}"
   when: item.1.name not in (gotify_existing_applications_cleaned[item.0.name] | map(attribute='name'))
