Rework vars for infra-zonemta

--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/defaults/main.yml
@@ -1,8 +1,5 @@
 ---
 
-zonemta_feeder_authentication_username: smtp
-zonemta_feeder_authentication_password: clear_password
-
 prometheus_operator_enabled: true
 
 prometheus_retention: 7d
@@ -14,11 +11,11 @@ prometheus_allowed_namespaces:
   - logging
 
 alertmanager_alerts_smtp_enabled: True
-alertmanager_alerts_smtp_smarthost: "{{ zonemta_smtp_servername }}:587"
+alertmanager_alerts_smtp_smarthost: "{{ zonemta.smtp_servername }}:587"
 alertmanager_alerts_smtp_require_tls: true
 alertmanager_alerts_smtp_from: "alertmanager@{{ web_base_domain }}"
-alertmanager_alerts_smtp_auth_username: "{{ zonemta_feeder_authentication_username }}"
-alertmanager_alerts_smtp_auth_password: "{{ zonemta_feeder_authentication_password }}"
+alertmanager_alerts_smtp_auth_username: "{{ zonemta.feeder.authentication_username }}"
+alertmanager_alerts_smtp_auth_password: "{{ zonemta.feeder.authentication_password }}"
 #alertmanager_alerts_default_receiver: default
 #alertmanager_alerts_receivers:
 # - name: "{{ alertmanager_alerts_default_receiver }}"
