--- a/ansible/install_applications/vars/download-sabnzbd.yml
+++ b/ansible/install_applications/vars/download-sabnzbd.yml
@@ -9,9 +9,9 @@ sabnzbd:
   api_key: "{{ sabnzbd_api_key | default('abcdefghijklmnopqrstuvwxyz123456') }}"
 
   smtp:
-    host: "{{ sabnzbd_smtp_host | default(zonemta_smtp_servername) }}"
+    host: "{{ sabnzbd_smtp_host | default(zonemta.smtp_servername) }}"
     port: "{{ sabnzbd_smtp_port | default(587) }}"
-    user: "{{ sabnzbd_smtp_user | default(zonemta_feeder_authentication_username) }}"
-    password: "{{ sabnzbd_smtp_password | default(zonemta_feeder_authentication_password) }}"
+    user: "{{ sabnzbd_smtp_user | default(zonemta.feeder.authentication_username) }}"
+    password: "{{ sabnzbd_smtp_password | default(zonemta.feeder.authentication_password) }}"
 
   nzbToMedia_config_sickbeard: "{{ sabnzbd_nzbToMedia_config_sickbeard | default({}) }}"
