--- a/ansible/install_applications/vars/download-sickchill.yml
+++ b/ansible/install_applications/vars/download-sickchill.yml
@@ -7,9 +7,9 @@ sickchill:
   api_key: "{{ sickchill_api_key | default('abcdefghijklmnopqrstuvwxyz123456') }}"
 
   smtp:
-    host: "{{ sickchill_smtp_host | default(zonemta_smtp_servername) }}"
+    host: "{{ sickchill_smtp_host | default(zonemta.smtp_servername) }}"
     port: "{{ sickchill_smtp_port | default(587) }}"
     tls: "{{ sickchill_smtp_tls | default(True) }}"
-    user: "{{ sickchill_smtp_user | default(zonemta_feeder_authentication_username) }}"
-    password: "{{ sickchill_smtp_password | default(zonemta_feeder_authentication_password) }}"
+    user: "{{ sickchill_smtp_user | default(zonemta.feeder.authentication_username) }}"
+    password: "{{ sickchill_smtp_password | default(zonemta.feeder.authentication_password) }}"
     from: "{{ sickchill_smtp_from | default('noreply@' + web_base_domain) }}"
