--- a/ansible/install_applications/roles/stream-airsonic.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/stream-airsonic.deploy/defaults/main.yml
@@ -1,8 +1,5 @@
 ---
 
-zonemta_feeder_authentication_username: smtp
-zonemta_feeder_authentication_password: clear_password
-
 airsonic_enabled: true
 
 airsonic_context_path: /airsonic
@@ -15,10 +12,10 @@ airsonic_ldap_servername: "{{ openldap.ldap.servername }}"
 airsonic_ldap_users_dn: "{{ openldap.ldap.structure_users_ou_dn }}"
 airsonic_ldap_manager_dn: "{{ openldap.ldap.readonly_user_dn }}"
 airsonic_ldap_manager_password: "{{ openldap.ldap.readonly_user_password }}"
-airsonic_smtp_host: "{{ zonemta_smtp_servername }}"
+airsonic_smtp_host: "{{ zonemta.smtp_servername }}"
 airsonic_smtp_port: 587
 # STARTTLS, SSL/TLS, or anything else
 airsonic_smtp_encryption: STARTTLS
-airsonic_smtp_user: "{{ zonemta_feeder_authentication_username }}"
-airsonic_smtp_password: "{{ zonemta_feeder_authentication_password }}"
+airsonic_smtp_user: "{{ zonemta.feeder.authentication_username }}"
+airsonic_smtp_password: "{{ zonemta.feeder.authentication_password }}"
 airsonic_smtp_from: "noreply@{{ web_base_domain }}"
