Add vars for container settings

--- a/ansible/install_applications/vars/auth-lemonldap.yml
+++ b/ansible/install_applications/vars/auth-lemonldap.yml
@@ -3,6 +3,13 @@
 lemonldap:
   enabled: "{{ lemonldap_enabled | default(True) }}"
 
+  container:
+    image: "{{ docker_registry.url }}/lemonldap"
+    requests_cpu: "{{ lemonldap_container_requests_cpu | default('100m') }}"
+    requests_memory: "{{ lemonldap_container_requests_memory | default('384Mi') }}"
+    limits_cpu: "{{ lemonldap_container_limits_cpu | default('200m') }}"
+    limits_memory: "{{ lemonldap_container_limits_memory | default('384Mi') }}"
+
   fastcgi_port: "{{ lemonldap_fastcgi_port | default(9000) }}"
   persistent_volume_path: "{{ lemonldap_persistent_volume_path | default('/var/lib/lemonldap-ng-pv') }}"
 
