--- a/ansible/install_applications/vars/infra-gotify.yml
+++ b/ansible/install_applications/vars/infra-gotify.yml
@@ -3,6 +3,13 @@
 gotify:
   enabled: "{{ gotify_enabled | default(True) }}"
 
+  container:
+    image: "gotify/server:2.0.5"
+    requests_cpu: "{{ gotify_container_requests_cpu | default('50m') }}"
+    requests_memory: "{{ gotify_container_requests_memory | default('64Mi') }}"
+    limits_cpu: "{{ gotify_container_limits_cpu | default('100m') }}"
+    limits_memory: "{{ gotify_container_limits_memory | default('64Mi') }}"
+
   default_admin_user: "{{ gotify_default_admin_user | default('admin') }}"
   default_admin_password: "{{ gotify_default_admin_password | default('clear_password') }}"
   users: "{{ gotify_users | default([]) }}"
