--- a/ansible/install_applications/vars/monitoring-prometheus-operator.yml
+++ b/ansible/install_applications/vars/monitoring-prometheus-operator.yml
@@ -3,9 +3,24 @@
 prometheus_operator:
   enabled: "{{ prometheus_operator_enabled | default(True) }}"
 
+  container:
+    image: "quay.io/coreos/prometheus-operator:v0.29.0"
+    requests_cpu: "{{ prometheus_operator_container_requests_cpu | default('100m') }}"
+    requests_memory: "{{ prometheus_operator_container_requests_memory | default('100Mi') }}"
+    limits_cpu: "{{ prometheus_operator_container_limits_cpu | default('200m') }}"
+    limits_memory: "{{ prometheus_operator_container_limits_memory | default('200Mi') }}"
+
 prometheus:
   retention: "{{ prometheus_retention | default('7d') }}"
   allowed_namespaces: "{{ prometheus_allowed_namespaces | default(prometheus_allowed_namespaces_default) }}"
+
+  container:
+    base_image: "quay.io/prometheus/prometheus"
+    image_version: "v2.7.2"
+    requests_cpu: "{{ prometheus_container_requests_cpu | default('200m') }}"
+    requests_memory: "{{ prometheus_container_requests_memory | default('768Mi') }}"
+    limits_cpu: "{{ prometheus_container_limits_cpu | default('500m') }}"
+    limits_memory: "{{ prometheus_container_limits_memory | default('768Mi') }}"
 
 prometheus_allowed_namespaces_default:
   - default
@@ -15,6 +30,14 @@ prometheus_allowed_namespaces_default:
   - logging
 
 alertmanager:
+  container:
+    base_image: "quay.io/prometheus/alertmanager"
+    image_version: "v0.16.2"
+    requests_cpu: "{{ alertmanager_container_requests_cpu | default('100m') }}"
+    requests_memory: "{{ alertmanager_container_requests_memory | default('256Mi') }}"
+    limits_cpu: "{{ alertmanager_container_limits_cpu | default('250m') }}"
+    limits_memory: "{{ alertmanager_container_limits_memory | default('256Mi') }}"
+
   smtp:
     enabled: "{{ alertmanager_smtp_enabled | default(True) }}"
     smarthost: "{{ alertmanager_smtp_smarthost | default(zonemta.smtp_servername + ':587') }}"
