--- a/ansible/install_applications/vars/auth-phpldapadmin.yml
+++ b/ansible/install_applications/vars/auth-phpldapadmin.yml
@@ -2,7 +2,14 @@
 
 phpldapadmin:
   enabled: "{{ openldap_enabled | default(True) }}"
-  
+
+  container:
+    image: "osixia/phpldapadmin:0.8.0"
+    requests_cpu: "{{ phpldapadmin_container_requests_cpu | default('100m') }}"
+    requests_memory: "{{ phpldapadmin_container_requests_memory | default('256Mi') }}"
+    limits_cpu: "{{ phpldapadmin_container_limits_cpu | default('200m') }}"
+    limits_memory: "{{ phpldapadmin_container_limits_memory | default('256Mi') }}"
+
   ldap_servername: "{{ phpldapadmin_ldap_servername | default(openldap.ldap.servername) }}"
   bind_id: "{{ phpldapadmin_bind_id | default(openldap.ldap.readonly_user_dn) }}"
   bind_password: "{{ phpldapadmin_bind_password | default(openldap.ldap.readonly_user_password) }}"
