--- a/ansible/install_applications/vars/download-sabnzbd.yml
+++ b/ansible/install_applications/vars/download-sabnzbd.yml
@@ -3,6 +3,13 @@
 sabnzbd:
   enabled: "{{ sabnzbd_enabled | default(True) }}"
 
+  container:
+    image: "{{ docker_registry.url }}/sabnzbd"
+    requests_cpu: "{{ sabnzbd_container_requests_cpu | default('100m') }}"
+    requests_memory: "{{ sabnzbd_container_requests_memory | default('256Mi') }}"
+    limits_cpu: "{{ sabnzbd_container_limits_cpu | default('200m') }}"
+    limits_memory: "{{ sabnzbd_container_limits_memory | default('256Mi') }}"
+
   context_root: "{{ sabnzbd_context_root | default('/') }}"
   user: "{{ sabnzbd_user | default('sabnzbd') }}"
   password: "{{ sabnzbd_password | default('clear_password') }}"
