--- a/ansible/install_applications/vars/download-sickchill.yml
+++ b/ansible/install_applications/vars/download-sickchill.yml
@@ -3,6 +3,13 @@
 sickchill:
   enabled: "{{ sickchill_enabled | default(True) }}"
 
+  container:
+    image: "linuxserver/sickchill:amd64-6bfdb223-ls14"
+    requests_cpu: "{{ sickchill_container_requests_cpu | default('100m') }}"
+    requests_memory: "{{ sickchill_container_requests_memory | default('256Mi') }}"
+    limits_cpu: "{{ sickchill_container_limits_cpu | default('200m') }}"
+    limits_memory: "{{ sickchill_container_limits_memory | default('256Mi') }}"
+
   context_root: "{{ sickchill_context_root | default('/') }}"
   api_key: "{{ sickchill_api_key | default('abcdefghijklmnopqrstuvwxyz123456') }}"
 
