--- a/ansible/install_applications/vars/home-homeassistant.yml
+++ b/ansible/install_applications/vars/home-homeassistant.yml
@@ -2,12 +2,13 @@
 
 homeassistant:
   enabled: "{{ homeassistant_enabled | default(True) }}"
-
-  mysql:
-    user: "{{ homeassistant_mysql_user | default('homeassistant') }}"
-    database: "{{ homeassistant_mysql_database | default('homeassistant') }}"
-    password: "{{ homeassistant_mysql_password | default('clear_password') }}"
-    root_password: "{{ homeassistant_mysql_root_password | default('clear_password') }}"
+  
+  container:
+    image: "{{ docker_registry.url }}/homeassistant"
+    requests_cpu: "{{ homeassistant_homeassistant_container_requests_cpu | default('500m') }}"
+    requests_memory: "{{ homeassistant_homeassistant_container_requests_memory | default('512Mi') }}"
+    limits_cpu: "{{ homeassistant_homeassistant_container_limits_cpu | default('1000m') }}"
+    limits_memory: "{{ homeassistant_homeassistant_container_limits_memory | default('512Mi') }}"
 
   mqtt:
     user: "{{ homeassistant_mqtt_user | default('homeassistant') }}"
@@ -34,3 +35,17 @@ homeassistant:
     application_name: "{{ gotify.homeassistant.application_name | default('HomeAssistant') }}"
 
   serial_remote_devices: "{{ homeassistant_serial_remote_devices | default({}) }}"
+
+
+homeassistant_mysql:
+  container:
+    image: "mysql:5.6.43"
+    requests_cpu: "{{ homeassistant_mysql_container_requests_cpu | default('250m') }}"
+    requests_memory: "{{ homeassistant_mysql_container_requests_memory | default('512Mi') }}"
+    limits_cpu: "{{ homeassistant_mysql_container_limits_cpu | default('500m') }}"
+    limits_memory: "{{ homeassistant_mysql_container_limits_memory | default('512Mi') }}"
+
+  user: "{{ homeassistant_mysql_user | default('homeassistant') }}"
+  database: "{{ homeassistant_mysql_database | default('homeassistant') }}"
+  password: "{{ homeassistant_mysql_password | default('clear_password') }}"
+  root_password: "{{ homeassistant_mysql_root_password | default('clear_password') }}"
