--- a/ansible/install_applications/vars/home-nodered.yml
+++ b/ansible/install_applications/vars/home-nodered.yml
@@ -4,6 +4,13 @@ nodered:
   enabled: "{{ nodered_enabled | default(True) }}"
   context_root: "{{ nodered_context_root | default('/') }}"
 
+  container:
+    image: "{{ docker_registry.url }}/nodered"
+    requests_cpu: "{{ nodered_container_requests_cpu | default('250m') }}"
+    requests_memory: "{{ nodered_container_requests_memory | default('256Mi') }}"
+    limits_cpu: "{{ nodered_container_limits_cpu | default('500m') }}"
+    limits_memory: "{{ nodered_container_limits_memory | default('256Mi') }}"
+
   ldap:
     servername: "{{ nodered_ldap_servername | default(openldap.ldap.servername) }}"
     users_dn: "{{ nodered_ldap_users_dn | default(openldap.ldap.structure_users_ou_dn) }}"
