--- a/ansible/install_applications/vars/home-roomassistant.yml
+++ b/ansible/install_applications/vars/home-roomassistant.yml
@@ -3,4 +3,11 @@
 roomassistant:
   enabled: "{{ roomassistant_enabled | default(True) }}"
 
+  container:
+    image: "mkerix/room-assistant:1.1.1"
+    requests_cpu: "{{ roomassistant_container_requests_cpu | default('100m') }}"
+    requests_memory: "{{ roomassistant_container_requests_memory | default('256Mi') }}"
+    limits_cpu: "{{ roomassistant_container_limits_cpu | default('250m') }}"
+    limits_memory: "{{ roomassistant_container_limits_memory | default('256Mi') }}"
+
   environment_variables: "{{ roomassistant_environment_variables | default({}) }}"
