--- a/ansible/install_applications/vars/infra-docker-registry.yml
+++ b/ansible/install_applications/vars/infra-docker-registry.yml
@@ -7,6 +7,13 @@ _docker_registry_var_loader:
 docker_registry:
   enabled: "{{ docker_registry_enabled | default(True) }}"
 
+  container:
+    image: "registry:2.7.1"
+    requests_cpu: "{{ docker_registry_container_requests_cpu | default('50m') }}"
+    requests_memory: "{{ docker_registry_container_requests_memory | default('64Mi') }}"
+    limits_cpu: "{{ docker_registry_container_limits_cpu | default('100m') }}"
+    limits_memory: "{{ docker_registry_container_limits_memory | default('64Mi') }}"
+
   servername: "{{ docker_registry_servername | default('registry.default') }}"
   port: "{{ _docker_registry_var_loader.port }}"
   url: "{{ docker_registry_url | default('127.0.0.1:' + _docker_registry_var_loader.port) }}"
