--- a/ansible/install_applications/vars/logging-kibana.yml
+++ b/ansible/install_applications/vars/logging-kibana.yml
@@ -2,6 +2,14 @@
 
 kibana:
   enabled: "{{ kibana_enabled | default(True) }}"
+
+  container:
+    image: "amazon/opendistro-for-elasticsearch-kibana:0.9.0"
+    requests_cpu: "{{ kibana_container_requests_cpu | default('100m') }}"
+    requests_memory: "{{ kibana_container_requests_memory | default('512Mi') }}"
+    limits_cpu: "{{ kibana_container_limits_cpu | default('1000m') }}"
+    limits_memory: "{{ kibana_container_limits_memory | default('512Mi') }}"
+
   context_path: "{{ kibana_context_path | default('/kibana') }}"
   
   elasticsearch:
