--- a/ansible/install_applications/vars/stream-airsonic.yml
+++ b/ansible/install_applications/vars/stream-airsonic.yml
@@ -3,6 +3,13 @@
 airsonic:
   enabled: "{{ airsonic_enabled | default(True) }}"
 
+  container:
+    image: "airsonic/airsonic:10.3.1-RELEASE"
+    requests_cpu: "{{ airsonic_container_requests_cpu | default('250m') }}"
+    requests_memory: "{{ airsonic_container_requests_memory | default('512Mi') }}"
+    limits_cpu: "{{ airsonic_container_limits_cpu | default('500m') }}"
+    limits_memory: "{{ airsonic_container_limits_memory | default('512Mi') }}"
+
   context_path: "{{ airsonic_context_path | default('/airsonic') }}"
   extra_java_opts: "{{ airsonic_extra_java_opts | default(airsonic_extra_java_opts_default) }}"
   
