Add vars for docker image settings

--- a/ansible/install_applications/roles/infra-zonemta.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/tasks/main.yml
@@ -22,6 +22,8 @@
     build:
       path: "{{ role_path }}/app/build"
       pull: yes
+      args:
+        from_image: "{{ zonemta.container.from_image }}"
     push: yes
 
 - name: Deploy ZoneMTA
