--- a/ansible/install_applications/vars/web-ttrss.yml
+++ b/ansible/install_applications/vars/web-ttrss.yml
@@ -5,6 +5,8 @@ ttrss:
 
   container:
     image: "{{ docker_registry.url }}/ttrss"
+    # Keep the image version in sync with the ttrss_pgsql.schema_url variable
+    from_image: "linuxserver/tt-rss:amd64-19.2-ls21"
     requests_cpu: "{{ ttrss_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ ttrss_container_requests_memory | default('64Mi') }}"
     limits_cpu: "{{ ttrss_container_limits_cpu | default('200m') }}"
@@ -40,6 +42,6 @@ ttrss_pgsql:
   user: "{{ ttrss_pgsql_user | default('ttrss') }}"
   database: "{{ ttrss_pgsql_database | default('ttrss') }}"
   password: "{{ ttrss_pgsql_password | default('clear_password') }}"
-  # Keep the schema URL in sync with the image version
+  # Keep the schema URL in sync with the image version in ttrss.container.from_image
   schema_url: 'https://git.tt-rss.org/fox/tt-rss/raw/19.2/schema/ttrss_schema_pgsql.sql'
   schema_path_temp: /tmp/tt-rss-schema.sql
