--- a/ansible/install_applications/roles/auth-lemonldap.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/tasks/main.yml
@@ -7,6 +7,8 @@
     build:
       path: "{{ role_path }}/app/build"
       pull: yes
+      args:
+        from_image: "{{ lemonldap.container.from_image }}"
     push: yes
 
 - name: Deploy LemonLDAP
